--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block layout %}
-    {% include "partials/nav_accounts.html" %}
+    {% include "partials/nav_checkout.html" %}
     
     <header class="header container-fluid">
         <div class="row-fluid">
@@ -44,13 +44,13 @@
             </div><!-- /navbar-inner -->
         </div><!-- /navbar -->
     </header><!-- /header -->
-    {% for message in messages %}
-       <div class="alert fade in alert-{{ message.tags }}">
-       	<a class="close" data-dismiss="alert">x</a>
-       	{{ message }}
-       </div>
-    {% endfor %}
     <div class="container-fluid page">
+        {% for message in messages %}
+        <div class="alert fade in alert-{{ message.tags }}">
+            <a class="close" data-dismiss="alert">x</a>
+            {{ message }}
+        </div>
+        {% endfor %}
        {% block header %}
        {% endblock %}
 
@@ -85,7 +85,7 @@
             </div>
         </div><!-- /page_inner -->
     </div>
-    {% include "partials/footer.html" %}
+    {% include "partials/footer_checkout.html" %}
 {% endblock %}
 
 {# Block for additional scripts #}
