--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -4,6 +4,10 @@
 Order preview | {{ block.super }}
 {% endblock %}
 
+{% block checkout-nav %}
+{% include 'checkout/nav.html' with step=4 %}
+{% endblock %}
+
 {% block place_order %}
 <h3>Place your order</h3>
 <form method="post" action="{% url checkout:payment-details %}">
