Fixed a few sloppy basket regressions

--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -197,3 +197,6 @@ Basket | {{ block.super }}
 oscar.basket.init();
 {% endblock %}
 
+{% block extrascripts %}
+    <script src="{{ STATIC_URL }}oscar/js/oscar/checkout.js" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
