Place order button now gets disabled when clicked

--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -130,6 +130,9 @@ Checkout | {{ block.super }}
 {% block place_order %}
 {% endblock place_order %}
 
-
 {% endblock content %}
+
+{% block onbodyload %}
+oscar.checkout.init();
+{% endblock %}
 
