--- a/oscar/templates/checkout/shipping_methods.html
+++ b/oscar/templates/checkout/shipping_methods.html
@@ -13,7 +13,9 @@ Shipping method | {{ block.super }}
 {% block shipping_address %}{% endblock %}
 
 {% block shipping_method %}
-<h1>Choose a shipping method</h1>
+<div class="sub-header">
+	<h3>Choose a shipping method</h3>
+</div>
 
 <table class="table table-striped table-bordered">
     <thead>
