--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -1651,6 +1651,13 @@ button.btn.small, input[type="submit"].btn.small {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  /*  Position alerts at the bottom of the browser window*/
+
+  position: fixed;
+  bottom: 0;
+  right: 2em;
+  width: 200px;
+  z-index: 9;
 }
 .alert, .alert-heading {
   color: #c09853;
@@ -3007,7 +3014,7 @@ body {
   margin-left: 0px;
 }
 .basket_summary .checkout-quantity input, .later_summary .checkout-quantity input {
-  width: 20%;
+  width: 10%;
   float: left;
   margin-right: 2px;
 }
@@ -4156,7 +4163,4 @@ body {
 }
 .invisible {
   visibility: hidden;
-}
-.required {
-  font-weight: bold;
 }
