--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -28,39 +28,47 @@ Basket | {{ block.super }}
 
 {% if not basket.is_empty %}
 
-<form action="." method="post" class="basket_summary" id="basket_formset">
-    {% csrf_token %}
-    {{ formset.management_form }}
-    <table class="table table-striped table-bordered">
-        <tbody>
-        {% for form in formset %}
-        <tr>
-			<td>
-				{{ form.id }}
-				{% product_image form.instance.product as product_image %}
-				<div style="width:100px">
-					<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
-				</div>
-				<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
-				{{ form.instance.product.stockrecord.availability }}
-			</td>
-			<td>
-				{{ form.quantity }} <button class="btn btn-small">Update</button><br/>
-				<a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove</a>
+<div class="well">
+	<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
+</div>
+
+	<form action="." method="post" class="basket_summary" id="basket_formset">
+		{% csrf_token %}
+		{{ formset.management_form }}
+
+		{% for form in formset %}
+	<div class="row-fluid">
+		<div class="span2">
+			{{ form.id }}
+			{% product_image form.instance.product as product_image %}
+			<div style="width:100px">
+				<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+			</div>
+		</div>
+		<div class="span3">
+			<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
+			{{ form.instance.product.stockrecord.availability }}
+		</div>
+		<div class="span5">
+			<div class="checkout-quantity">{{ form.quantity }} <button class="btn btn-small">Update</button><br/>
+				<a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove </a>
 				{% if request.user.is_authenticated %}
-					| <a href="#" data-id="{{ forloop.counter0 }}" class="save">Save for later</a>
+				  | <a href="#" data-id="{{ forloop.counter0 }}" class="save">Save for later</a>
 				{% endif %}
 				<div style="display:none">
 					{{ form.save_for_later }}
 					{{ form.DELETE }}
 				</div>
-			</td>
-            <td>{{ form.instance.unit_price_incl_tax|currency }}</td>
-            <td>{{ form.instance.line_price_incl_tax|currency }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+			</div>
+		</div>
+		<div class="span1">
+			{{ form.instance.unit_price_incl_tax|currency }}
+		</div>
+		<div class="span1">
+			{{ form.instance.line_price_incl_tax|currency }}
+		</div>
+	</div>
+	{% endfor %}
 </form>
 
 <p id="voucher_form_link"><a href="#voucher">I have a voucher code...</a></p>
@@ -76,69 +84,85 @@ Basket | {{ block.super }}
 	</form>
 </div>
 
-<div id="basket_totals">
-	<table>
-		{% with offer_discounts=basket.offer_discounts voucher_discounts=basket.grouped_voucher_discounts %}
-		{% if offer_discounts or voucher_discounts %}
-			<tr>
-				<th>Basket total (before discounts)</th>
-				<td>{{ basket.total_incl_tax_excl_discounts|currency }}</td>
-			</tr>
-			{% if offer_discounts %}
+
+<div class="row-fluid">
+	<div class="span6">
+		<div class="sub-header">
+		<h2>Voucher/Promo Code</h2>
+		</div>
+	</div>
+	<div class="span6">
+		<div class="sub-header">
+			<h2>Basket Totals</h2>
+		</div>
+		<div id="basket_totals">
+			<table class="table table-striped table-condensed">
+				<tbody>
+				{% with offer_discounts=basket.offer_discounts voucher_discounts=basket.grouped_voucher_discounts %}
+				{% if offer_discounts or voucher_discounts %}
+					<tr>
+						<th>Basket total (before discounts)</th>
+						<td>{{ basket.total_incl_tax_excl_discounts|currency }}</td>
+					</tr>
+					{% if offer_discounts %}
+						<tr>
+							<th>Site offers</th>
+							<td></td>
+						</tr>
+						{% for discount in offer_discounts %}
+						<tr>
+							<td>{{ discount.name }}</td>
+							<td>-{{ discount.discount|currency }}</td>
+						</tr>
+						{% endfor %}
+					{% endif %}
+					{% if voucher_discounts %}
+						<tr>
+							<th>Vouchers</th>
+							<td></td>
+						</tr>
+						{% for discount in voucher_discounts %}
+						<tr>
+							<td>
+								{{ discount.voucher.name }} ({{ discount.voucher.code }})
+								<form action="{% url basket:vouchers-remove discount.voucher.id %}" method="POST">
+									{% csrf_token %}
+									<input type="submit" value="Remove" class="btn btn-small btn-danger"/>
+								</form>
+							</td>
+							<td>-{{ discount.discount|currency }}</td>
+						</tr>
+						{% endfor %}
+					{% endif %}
+					<tr>
+						<th>Basket total (after discounts)</th>
+						<td>{{ basket.total_incl_tax|currency }}</td>
+					</tr>
+				{% else %}
+					<tr>
+						<th>Basket total</th>
+						<td>{{ basket.total_incl_tax|currency }}</td>
+					</tr>
+				{% endif %}
+				{% endwith %}
 				<tr>
-					<th>Site offers</th>
-					<td></td>
+					<th>Shipping ({{ shipping_method.name }})</th>
+					<td>{{ shipping_charge_incl_tax|currency }}</td>
 				</tr>
-				{% for discount in offer_discounts %}
 				<tr>
-					<td>{{ discount.name }}</td>
-					<td>-{{ discount.discount|currency }}</td>
+					<th>Order total</th>
+					<td>{{ order_total_incl_tax|currency }}</td>
 				</tr>
-				{% endfor %}
-			{% endif %}
-			{% if voucher_discounts %}
-				<tr>
-					<th>Vouchers</th>
-					<td></td>
-				</tr>
-				{% for discount in voucher_discounts %}
-				<tr>
-					<td>
-						{{ discount.voucher.name }} ({{ discount.voucher.code }})
-						<form action="{% url basket:vouchers-remove discount.voucher.id %}" method="POST">
-							{% csrf_token %}
-							<input type="submit" value="Remove" class="btn btn-small btn-danger"/>
-						</form>
-					</td>
-					<td>-{{ discount.discount|currency }}</td>
-				</tr>
-				{% endfor %}
-			{% endif %}
-			<tr>
-				<th>Basket total (after discounts)</th>
-				<td>{{ basket.total_incl_tax|currency }}</td>
-			</tr>
-		{% else %}
-			<tr>
-				<th>Basket total</th>
-				<td>{{ basket.total_incl_tax|currency }}</td>
-			</tr>
-		{% endif %}
-		{% endwith %}
-		<tr>
-			<th>Shipping ({{ shipping_method.name }})</th>
-			<td>{{ shipping_charge_incl_tax|currency }}</td>
-		</tr>
-		<tr>
-			<th>Order total</th>
-			<td>{{ order_total_incl_tax|currency }}</td>
-		</tr>
-	</table>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
+
 	
-<div class="form-actions">
-	<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
-</div>
+	<div class="well">
+		<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
+	</div>
 
 {% else %}
 
