--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -9,11 +9,13 @@ Order preview | {{ block.super }}
 {% endblock %}
 
 {% block place_order %}
-<h3>Place your order</h3>
+<div class="well">
+<h3>Please review the information below, then click "Place Order"</h3>
 <form method="post" action="{% url checkout:payment-details %}">
 {% csrf_token %}
 <div class="form-actions">
-    <input id='place-order' type="submit" value="Place order" class="btn btn-primary btn-large js-disable-on-click" />
+    <input id='place-order' type="submit" value="Place order" class="pull-right btn btn-primary btn-large js-disable-on-click" />
 </div>
 </form>
+</div>
 {% endblock place_order %}
