--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -59,8 +59,12 @@
     }
     .delete_address {
       position:absolute;
-      top:19px;
-      right:19px;
+      bottom: 10px;
+      right: 19px;
+      margin-bottom: 0;
+      input {
+          margin-bottom: 0;
+        }
     }
   }
   .alert-actions {
