--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -68,6 +68,9 @@ Checkout | {{ block.super }}
 </div>
 {% endblock order_contents %}
 
+<div class="sub-header">
+    <h2>Where should we ship to?</h2>
+</div>
 <div class="row-fluid">
 	<div class="span6">
 		{% block shipping_address %}
