--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -28,47 +28,52 @@ Basket | {{ block.super }}
 
 {% if not basket.is_empty %}
 
-<div class="well">
-	<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
+
+<div class="row-fluid">
+   <a href="{% url checkout:index %}" class="pull-right btn btn-primary">Proceed to checkout</a>
 </div>
+<hr/>
+<form action="." method="post" class="basket_summary" id="basket_formset">
+	{% csrf_token %}
+	{{ formset.management_form }}
 
-	<form action="." method="post" class="basket_summary" id="basket_formset">
-		{% csrf_token %}
-		{{ formset.management_form }}
-
-		{% for form in formset %}
-	<div class="row-fluid">
-		<div class="span2">
-			{{ form.id }}
-			{% product_image form.instance.product as product_image %}
-			<div style="width:100px">
-				<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
-			</div>
-		</div>
-		<div class="span3">
-			<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
-			{{ form.instance.product.stockrecord.availability }}
-		</div>
-		<div class="span5">
-			<div class="checkout-quantity">{{ form.quantity }} <button class="btn btn-small">Update</button><br/>
-				<a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove </a>
-				{% if request.user.is_authenticated %}
-				  | <a href="#" data-id="{{ forloop.counter0 }}" class="save">Save for later</a>
-				{% endif %}
-				<div style="display:none">
-					{{ form.save_for_later }}
-					{{ form.DELETE }}
-				</div>
-			</div>
-		</div>
-		<div class="span1">
-			{{ form.instance.unit_price_incl_tax|currency }}
-		</div>
-		<div class="span1">
-			{{ form.instance.line_price_incl_tax|currency }}
-		</div>
-	</div>
-	{% endfor %}
+	{% for form in formset %}
+    <div class="row-fluid">
+	    <div class="span2">
+	        <div class="basket-element">
+    		    {{ form.id }}
+    		    {% product_image form.instance.product as product_image %}
+    		    <div style="">
+    			    <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+    		    </div>
+		    </div>
+	    </div>
+	    <div class="span3">
+		    <a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
+		    {{ form.instance.product.stockrecord.availability }}
+	    </div>
+	    <div class="span5">
+		    <div class="checkout-quantity">
+		        {{ form.quantity }} <button class="btn btn-small">Update</button><br/>
+			    <a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove </a>
+			    {% if request.user.is_authenticated %}
+			    | <a href="#" data-id="{{ forloop.counter0 }}" class="save">Save for later</a>
+			    {% endif %}
+			    <div style="display:none">
+				    {{ form.save_for_later }}
+				    {{ form.DELETE }}
+			    </div>
+		    </div>
+	    </div>
+	    <div class="span1">
+		    {{ form.instance.unit_price_incl_tax|currency }}
+	    </div>
+	    <div class="span1">
+		    {{ form.instance.line_price_incl_tax|currency }}
+	    </div>
+    </div>
+    <hr />
+    {% endfor %}
 </form>
 
 <p id="voucher_form_link"><a href="#voucher">I have a voucher code...</a></p>
