--- a/oscar/static/oscar/less/bootstrap/type.less
+++ b/oscar/static/oscar/less/bootstrap/type.less
@@ -84,7 +84,14 @@ h6 {
 .page-header h1 {
   line-height: 1;
 }
-
+.page-header.action {
+  .clearfix();
+  margin-bottom:0px;
+  h1,h2 {
+    float:left;
+    margin-bottom:0px;
+  }
+}
 
 
 // LISTS
