--- a/oscar/static/oscar/css/responsive.css
+++ b/oscar/static/oscar/css/responsive.css
@@ -259,6 +259,9 @@
     width: auto;
     margin: 0;
   }
+  .basket-title {
+    display: none;
+  }
 }
 @media (min-width: 768px) and (max-width: 980px) {
   .row {
