--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -9,14 +9,36 @@
   .checkout-quantity {
       input {
           width: 10%;
-          float: left;
           margin-right: 2px;
+          margin-bottom:0px;
       }
   }
   .basket-products {
       border-bottom: 1px solid #E0E0E0;
       padding: 0 0 10px;
       margin-bottom: 18px;
+  }
+}
+.basket-title {
+  clear:both;
+  border-bottom:1px solid lighten(@grayLight, 30%);
+  padding-bottom:10px;
+  margin-bottom:10px;
+}
+.basket-items {
+  border-bottom:1px solid lighten(@grayLight, 30%);
+  margin-bottom:10px;
+  [class*="span"] {
+    .image_container {
+      width:75px;
+      float:left;
+      margin-right:15px;
+    }
+  }
+  .price {
+    font-size:@baseFontSize + 2;
+    color:@green;
+    font-weight:bold;
   }
 }
 
@@ -82,10 +104,13 @@
   } 
 }
 .total {
-  font-size: @baseFontSize + 5;
+  font-size: @baseFontSize + 3;
+  padding:3px 0px;
   text-align:right;
-  background-color:#FDF5D9;
   font-weight:bold;
+  td,th {
+      background-color:#FDF5D9!important;
+  }
 }
 
 .checkoutNav ul li {
