--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -166,9 +166,11 @@ Basket | {{ block.super }}
 </div>
 
 	
-	<div class="form-actions" >
+{% block formactions %}
+	<div class="form-actions clearfix" >
 		<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
 	</div>
+{% endblock formactions %}
 
 {% else %}
 
