--- a/oscar/static/oscar/css/responsive.css
+++ b/oscar/static/oscar/css/responsive.css
@@ -262,6 +262,9 @@
   .basket-title {
     display: none;
   }
+  .basket-items .pull-right {
+    float: none;
+  }
 }
 @media (min-width: 768px) and (max-width: 980px) {
   .row {
